<resources>
    <string name="app_name">Ghalam</string>
    <string name="search">Search</string>
    
    <!-- Fonts -->
    <string name="roboto_regular">fonts/Roboto/Roboto-Regular.ttf</string>
    <string name="roboto_bold">fonts/Roboto/Roboto-Bold.ttf</string>
    <string name="take_a_note">Take a note…</string>
    <string name="title">Title</string>
    <string name="note">Note…</string>
    <string name="all_notes">All Notes</string>
    <string name="create_new_label">Create new label</string>
    <string name="new_label">New Label</string>
    <string name="name_hint">Name…</string>
    <string name="save_uppercase">SAVE</string>
    <string name="cancel_uppercase">CANCEL</string>
</resources>
